# tests_LLM_project

./: README.md  projetoLLM.ipynb  pyproject.toml
docs/chroma/: chroma.sqlite3
